--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
                         <i class="fa fa-bar-chart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Data Analysis</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+					<p class="text-muted">Working Knowledge: Python, SQL, R, Unix</p>
+					<p class="text-muted">Basic Knowledge: Tableau, Spark</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -115,7 +116,8 @@
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Web Development</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Working Knowledge: HTML, javascript, MySQL, UIUX</p>
+					<p class="text-muted">Basic Knowledge: CSS, jQuery</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -123,7 +125,8 @@
                         <i class="fa fa-cogs fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Software Engineering</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Working Knowledge: Java, Python, SQL, Data Structures</p>
+					<p class="text-muted">Basic Knowledge: C.</p>
                 </div>
             </div>
         </div>
@@ -174,12 +177,12 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                    <img src="img/portfolio/tomato_intro.gif" class="img-responsive" alt=""> 
+                    <img src="img/portfolio/history_intro.png" class="img-responsive" alt=""> 
 
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Treehouse</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>Browsing History Timetable</h4>
+                        <p class="text-muted">Application Development</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -189,11 +192,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/golden.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/ubike_intro.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Golden</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>Ubike Station Shortage Map</h4>
+                        <p class="text-muted">Data Analysis</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -250,7 +253,7 @@
                                     <h4 class="subheading">Tsinghua University</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">In Tsinghua I earned my bachelor degree in sociology. I did a internshiop in Unisplendour Corporation Limited during 2015 fall smester, helping a team with their mobile application database and UI development. </p>
                                 </div>
                             </div>
                         </li>
@@ -264,7 +267,7 @@
                                     <h4 class="subheading">National Taiwan University</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">I was a exchange student there during spring 2015. My concentration was information science. I started to learn programming like Python and C from then.</p>
                                 </div>
                             </div>
                         </li>
@@ -278,7 +281,7 @@
                                     <h4 class="subheading">Univ. of Illinois, Urbana Champaign</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">After the exchange experience and internship, I decided to transfer my career to information technology. I went to a data science master program in UIUC. I enjoyed studying there so mcuh!</p>
                                 </div>
                             </div>
                         </li>
@@ -292,7 +295,7 @@
                                     <h4 class="subheading">Bay Area</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">For the last smester I moved to bay area. Currently I am writing javascript programs for a startup called Office IQ. I am searching for full time jobs as data or software engineer after graduation.</p>
                                 </div>
                             </div>
                         </li>
@@ -406,7 +409,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Contact Me</h2>
+					<h2 class="section-heading">Contact Me</h2>
+					<p>
+					<a href="mailto:rola.uiuc@gmail.com?Subject=Hello%20La" ><h4>rola.uiuc@gmail.com</h4></a>
+					</p>
 					<br/>
                   <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>  -->
                 </div>
@@ -451,24 +457,24 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Your Website 2016</span>
+                    <span class="copyright">Copyright &copy; LA LUO 2017</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
+                      <!--   <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        </li> </li>-->
+                        <li><a href="https://github.com/Rola1993"><i class="fa fa-github"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="https://www.linkedin.com/in/la-luo-637b4a94"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li><a href="#">Privacy Policy</a>
+                       <!--   <li><a href="#">Privacy Policy</a>
                         </li>
                         <li><a href="#">Terms of Use</a>
-                        </li>
+                        </li>-->
                     </ul>
                 </div>
             </div>
@@ -524,8 +530,8 @@
                                 <h2>Rotten Tomatoes WebCrawler</h2>
                                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/tomato.gif" alt="">
-                                <p>Start Bootstrap's Agency theme is based on Golden, a free PSD website template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Golden is a modern and clean one page web template that was made exclusively for Best PSD Freebies. This template has a great portfolio, timeline, and meet your team sections that can be easily modified to fit your needs.</p>
-                                <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/golden-free-one-page-web-template/">FreebiesXpress.com</a>.</p>
+                                <p>A program which could search the movies under a tag, show the ranking and create a text file containing popular comments, making an analysis and worldcloud visualization of the comment words’ frequency.</p>
+                                <p>Category: Data Analysis; Data Visualization</p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
                         </div>
@@ -550,11 +556,11 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2>Project Name</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/escape-preview.png" alt="">
-                                <p>Escape is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Escape is a one page web template that was designed with agencies in mind. This template is ideal for those looking for a simple one page solution to describe your business and offer your services.</p>
-                                <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/escape-one-page-psd-web-template/">FreebiesXpress.com</a>.</p>
+                                <h2>Browsing History Timetable</h2>
+                                <p class="item-intro text-muted">A personal project using Python.  Date: Sring 2017</p>
+                                <img class="img-responsive img-centered" src="img/portfolio/history.png" alt="">
+                                <p>A timetable showing the time, frequency and duration one uses various websites.</p>
+                                <p>Category: Application Development; Data Analysis; Data Visualization</p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
                         </div>
@@ -579,11 +585,11 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2>Project Name</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/dreams-preview.png" alt="">
-                                <p>Dreams is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Dreams is a modern one page web template designed for almost any purpose. It’s a beautiful template that’s designed with the Bootstrap framework in mind.</p>
-                                <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/dreams-free-one-page-web-template/">FreebiesXpress.com</a>.</p>
+                                <h2>Ubike Station Shortage Map</h2>
+                                <p class="item-intro text-muted">A personal project using python  Date: Spring 2015</p>
+                                <img class="img-responsive img-centered" src="img/portfolio/ubike.png" alt="">
+                                <p>Calculating the bikes in each ubike station in Taipei during a day, plotting the data as scatter and calculating Pearson correlation among them to determine whether the numbers of the bikes placed in each station are reasonable. Showing ubike stations in google map with classified colors indicating how intense the bike shortage of each station is.</p>
+                                <p>Category: Data Analysis; Data Visualization</p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
                         </div>
