--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <p>
                     <br>
                         <a href="http://www.mygoodcanteen.com">Website: http://www.mygoodcanteen.com</a></p>
-                        <a href="http://167.99.161.247">or http://www.mygoodcanteen.com or http://167.99.161.247</a></p>
+                        <a href="http://167.99.161.247">or http://167.99.161.247</a></p>
                         <a href="https://github.com/Rola1993/mysite_django">Github: https://github.com/Rola1993/mysite_django </a></p>
                     </div>
                 </div>
